--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "endOfLine": "auto",
-  "semi": false,
+  "semi": true,
   "printWidth": 80,
   "tabWidth": 2,
   "jsxBracketSameLine": false,
