--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@prisma/client": "^5.10.2",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "swiper": "^11.0.6",
+    "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
