--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.13",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -22,6 +23,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
